tests/errors/compiler/test.c
void main()
{
	//int arr[2] = { 1 2 };
	struct str { int a; int b; } st = { 1 2 };
}
